# kalshi-weather-bot

./: .dockerignore  .env.docker  .env.example  .gitignore  CLAUDE.md  Dockerfile.backend  PRD.md  README.md  alembic.ini  docker-compose.cloud.yml  docker-compose.prod.yml  docker-compose.yml  fly.frontend.toml  fly.toml  pyproject.toml  railway.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_user_demo_mode.py  0003_add_performance_indexes.py  0004_add_kelly_criterion_columns.py  5332f8e4c668_initial_tables.py
backend/: CLAUDE.md  __init__.py  celery_app.py  main.py
backend/api/: accuracy.py  auth.py  backtest.py  dashboard.py  deps.py  logs.py  markets.py  notifications.py  performance.py  queue.py  response_schemas.py  settings.py  trades.py
backend/backtesting/: __init__.py  data_loader.py  engine.py  exceptions.py  metrics.py  risk_sim.py  schemas.py
backend/common/: CLAUDE.md  __init__.py  config.py  database.py  encryption.py  exceptions.py  logging.py  metrics.py  middleware.py  models.py  schemas.py
backend/kalshi/: CLAUDE.md  __init__.py  auth.py  cache.py  client.py  exceptions.py  market_feed.py  markets.py  models.py  orders.py  rate_limiter.py  websocket.py
backend/prediction/: CLAUDE.md  __init__.py  accuracy.py  brackets.py  calibration.py  ensemble.py  error_dist.py  exceptions.py  features.py  ml_models.py  model_ensemble.py  pipeline.py  postmortem.py  scheduler.py  train_models.py  train_xgb.py  xgb_model.py
backend/trading/: CLAUDE.md  __init__.py  cooldown.py  ev_calculator.py  exceptions.py  executor.py  kelly.py  notifications.py  postmortem.py  risk_manager.py  scheduler.py  sync.py  trade_queue.py
backend/weather/: CLAUDE.md  __init__.py  cli_parser.py  exceptions.py  normalizer.py  nws.py  openmeteo.py  rate_limiter.py  scheduler.py  stations.py
backend/websocket/: __init__.py  events.py  manager.py  router.py  subscriber.py
docs/: deploy-fly.md  deploy-oracle.md  deploy-railway.md
frontend/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
frontend/__tests__/: api.test.ts  dashboard.test.tsx  hooks.test.ts  onboarding.test.tsx  settings.test.tsx  trade-card.test.tsx  trade-grouping.test.ts  trade-queue.test.tsx  utils.test.ts  websocket.test.ts  (+1 more)
scripts/: generate-env.sh
tests/: CLAUDE.md  __init__.py  conftest.py  factories.py  test_alert_rules.py  test_alertmanager_config.py  test_grafana_dashboards.py
(+144 files in other folders)
